# atomium

./: pyproject.toml
atomium/: base.py  data.py  mmcif.py  mmtf.py  structures.py  utilities.py
scripts/: speed.py
tests/time/: time.py
tests/unit/: test_base.py  test_utilities.py
