[tool.poetry]
name = "atomium"
version = "1.0.11"
description = "A molecular modeller and file parser."
authors = ["Sam Ireland <mail@samireland.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://atomium.samireland.com"
repository = "https://github.com/SamIreland/atomium"
keywords = ["chemistry", "bioinformatics", "proteins", "biochemistry", "molecules", "PDB", "MMCIF", "CIF", "MMTF"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.6"
numpy = "*"
requests = "*"
rmsd = "*"
paramiko = "*"
msgpack = "0.6.1"
valerius = "0.2"

[tool.poetry.group.dev.dependencies]
python-coveralls = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
tqdm = "*"
pytest = "*"
ruff = "*"
pylint = { version = "*", python = ">=3.7" }
mypy = "*"
deptry = { version = "*", python = ">=3.7" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
